# outline-shadowsocksconfig

./: .bazelrc  .gitignore  .travis.yml  BUILD.bazel  Gulpfile.ts  README.md  WORKSPACE  bower.json  jasmine.json  package.json  punycode.d.ts  shadowsocks_config.js  shadowsocks_config.spec.ts  shadowsocks_config.ts  tsconfig.json  tslint.json
.github/workflows/: pull_request_checks.yml
src/: BUILD  shadowsocks_config.spec.ts  shadowsocks_config.ts
tools/: bazel-0.28.1-linux-x86_64.sha256  bazel_0.28.1-linux-x86_64.deb.sha256  release.sh  travis.bazelrc
